--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
         <label for="lname">cognome:</label><br>
         <input type="text" id="lname" name="lname"><br><br>
         <input type="submit" value="Submit">
+        <label for="email">email</label>
     </form>
 </body>
 </html>
